# qt-remit

./: .gitignore  CMakeLists.txt  Makefile  README.md  clipboardbridge.cpp  constants.cpp  githubview.cpp  githubview.h  lastwindowstate.h  main.cpp  mainwindow.cpp  mainwindow.h  qt-remit.pro  remitview.cpp  remitview.h  resources.qrc  settings.cpp  settings.h  settingsdialog.h  webengineviewwithnavigationsignals.cpp  webengineviewwithnavigationsignals.h
include/: clipboardbridge.h  constants.h  settings.h  webengineviewwithnavigationsignals.h
resources/: README.md  qt-remit.icns  qt-remit.rc  resources.qrc
src/: constants.cpp  githubview.cpp  lastwindowstate.cpp  mainwindow.cpp  settings.cpp  settingsdialog.cpp  webengineviewwithnavigationsignals.cpp
